# jackal_catkin

./: .gitignore  .gitmodules  nohup_point_slam.txt
old_src/follow_waypoints/launch/: follow_waypoints.launch
old_src/follow_waypoints/saved_path/: A.csv  pose.csv
old_src/launch_delay/: README.md
old_src/launch_delay/launch/: VLP-32C_points.launch  delayed_launch.launch
old_src/pointcloud_to_laserscan/launch/: sample_node.launch
old_src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
old_src/tor59_jackal/: package.xml
old_src/tor59_jackal/meshes/: tor59_tower.stl  wibotic_rx.stl
old_src/tor59_jackal/urdf/: jackal_description.urdf.xacro
scripts/: map_experiment.sh  move_base.sh  nohup_point_slam.txt  nohup_record.txt  nohup_teb.txt  nohup_waypoint.txt  point_slam.sh  rosbag_record.sh  stop_exp.sh  teb_experiment.sh  waypoint_follower.sh
src/: .rosinstall
src/follow_waypoints/saved_path/: AI-CRV-1.csv  AI-CRV-2.csv  B.csv  cat_test.csv  cat_test_2.csv  ff1.csv  ff2.csv  ff_short.csv  loop_1.csv  loop_2.csv  loop_2inv.csv  loop_3.csv  loop_8.csv  m5_test.csv  test_tmp.csv  tmp.csv  tmp_01.csv
src/launch_delay/: CMakeLists.txt  package.xml
src/launch_delay/scripts/: launch_delay.sh
src/learning_tf2/: CMakeLists.txt  package.xml
src/learning_tf2/launch/: start_listener.lauch
src/learning_tf2/nodes/: tf2_listener.py
src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
src/test_pubsub/: CMakeLists.txt  package.xml
src/test_pubsub/src/: listner.cpp
src/tor59_jackal/: CMakeLists.txt  README.md
(+17 files in other folders)
